--- a/question.html
+++ b/question.html
@@ -1,107 +1,173 @@
 <!DOCTYPE html>
 <html>
-    
-    <style>
-        .question {
-            width:300px;
-            height:70px;
-            border: 5px outset red;
-            background-color: lightblue;
-            text-align: center;
-            font-size: 10px;
-        }
-        .score {
-            border: 5px outset black;
-            background-color: white;
-            text-align: left;
-        }
-        .Answer1 {
-        border: none;
-        color: black;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        }
-        .Answer2 {
-        border: none;
-        color: black;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        }
-        .Answer3 {
-        border: none;
-        color: black;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        }
-        .Answer4 {
-        border: none;
-        color: black;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        }
 
-    </style>
-    <title>
-        WonderLand Trivia
-    </title>
-    <div id="score" class="score">
-        Score: 0/10
-    </div>
-    <div id="question" class="question">
-        <h1>
-            Question: What color is Alice and wonderlands hair?
-        </h1>
-    </div>
-    <button id="answer1" class="Answer1" onclick= "checkAnswer(1)">
-        Answer A
-    </button>
-    <button id="answer2" class="Answer2" onclick= "checkAnswer(2)">
-        Answer B
-    </button>
-    <button id="answer3" class="Answer3" onclick= "checkAnswer(3)">
-        Answer C
-    </button>
-    <button id="answer4" class="Answer4" onclick= "checkAnswer(4)">
-        Answer D
-    </button>
-    <script>
-        let ball = document.getElementById("question");
+<style>
+    .question {
+        width: 500px;
+        height: 70px;
+        border: 5px outset red;
+        background-color: lightblue;
+        text-align: center;
+        font-size: 30px;
+    }
 
-    var myVar = setInterval(spostaDiv, 90);
+    .score {
+        border: 5px outset black;
+        background-color: white;
+        text-align: left;
+    }
+
+    .Answer1 {
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+    .Answer2 {
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+    .Answer3 {
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+    .Answer4 {
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+</style>
+<title>
+    WonderLand Trivia
+</title>
+<div id="score" class="score">
+    Score: 0/2500
+</div>
+<div id="question" class="question">
+    <h1>
+        Question: What color is Alice and wonderlands hair?
+    </h1>
+</div>
+<button id="answer1" class="Answer1" onclick="checkAnswer(1)">
+    Answer A
+</button>
+<button id="answer2" class="Answer2" onclick="checkAnswer(2)">
+    Answer B
+</button>
+<button id="answer3" class="Answer3" onclick="checkAnswer(3)">
+    Answer C
+</button>
+<button id="answer4" class="Answer4" onclick="checkAnswer(4)">
+    Answer D
+</button>
+<script>
+    let questionElement = document.getElementById("question");
+
     var margin = 0;
 
-    let l = window.screen.width;
-    let w = 1300;
+    let w = window.screen.width;
 
-function spostaDiv() {
-    console.log(w);
-    if (margin == w) {
-        margin = 0 + "px";
-    } else {
-        ball.style.marginLeft = margin + "px";
+    function moveRight() {
+        console.log(w);
+        if (margin == w) {
+            margin = 0;
+        } else {
+            questionElement.style.marginLeft = margin + "px";
+        }
+        margin += 10;
+
     }
-    margin += 10;
-   }
-       </script>
-    
+    const questions = [
+        { question: "What is the White Rabbit’s catchphrase?", correct: "D", options: ["A. Let's go, let's go, let's go!", "B. Hurry up, hurry up, hurry up!", "C. My time has come! ", "D. I'm late, I'm late, I'm late!"] },
+        { question: "How many songs are in Alice in Wonderland?", correct: "B", options: ["A. 7", "B. 14", "C. 11", "D. 5"] },
+        { question: "What colour dress does Alice wear?", correct: "A", options: ["A. Blue and White", "B. Orange And White", "C. Purple and Blue", "D. Red and Blue"] },
+        { question: "What is the Queen's full name?", correct: "A", options: ["A. The Queen of Hearts", "B. The Queen of Spades", "C. The Queen of Clubs", "D. The Queen of Farts"] },
+        { question: "When was Alice in Wonderland released(animated version)?", correct: "A", options: ["A. 1951", "B. 1965", "C. 1949", "D. 1970"] },
+        { question: "What game does Alice play?", correct: "B", options: ["A. Football", "B. Croquet", "C. Horseshoes", "D. Basketball"] },
+        { question: "What is the name of Alice's cat?", correct: "A", options: ["A. Dinah", "B. Joey", "C. Aram", "D. Yakub"] },
+        { question: "Which animal does Alice follow into Wonderland?", correct: "B", options: ["A. A mouse", "B. Rabbit", "C. Horse", "D. Cat"] },
+        { question: "Who wrote Alice’s Adventures in Wonderland", correct: "C", options: ["A. James Franklin", "B. Mark Danielowski", "C. Lewis Carroll", "D. Cathy Newman"] },
+        { question: "What type of flower conducts the floral orchestra?", correct: "B", options: ["A. Lily", "B. Rose", "C. Daisy", "D. Orchid"] },
+        { question: "According to the Queen of Hearts, people over what height are not permitted in the court?", correct: "D", options: ["A. One meter", "A yard", "A foot", "A mile"] },
+        { question: "What beloved item did the March Hare destroy?", correct: "C", options: ["A. Key", "B. Clock", "C. Pocket Watch", "D. Bracelet"] },
+        { question: "What is the first thing the Mad Hatter does to the White Rabbit's watch?", correct: "D", options: ["A. Eats it", "B. Throws it away", "C. Kicks it", "D. Dunks it in tea"] },
+        { question: "Why couldn't the White Queen defeat the Jabberwocky herself?", correct: "A", options: ["A. It was against her vows", "B. She was tired", "C. She couldn't find her", "D. She didn't have the time"] },
+        { question: "Which character sings 'Twas Brillig'?", correct: "B", options: ["A. The Caterpillar", "B. The Cheshire Cat", "C. Tweedledum and Tweedledee", "D. The March Hare"] },
+        { question: "How tall is the caterpillar?", correct: "D.", options: ["A. One foot", "B. Four inches", "C. Nine inches", "D. 2 Feet"] },
+        { question: "Where is the Red Queen's castle?", correct: "A", options: ["A. Salazen Grum", "B. Tulgey Wood", "C. Marmoreal", "D. The Stable"] },
+        { question: "What is the name of the \"Lizard with the ladder\"?", correct: "A", options: ["A. Bill", "B. Smith", "C. Himzel", "D. Lizzy"] },
+        { question: "What two animals were used in the croquet game?", correct: "B. ", options: ["A. Owl and Caterpiller", "B. Flamingo and hedgehog", "C. Dog and Cat", "D. Kittyo and Car"] },
+        { question: "What colour were the roses being painted?", correct: "C", options: ["A. Blue", "2. Purple", "3. Red", "4. Pink"] },
+        { question: "What month was on the calendar behind mother oyster in the oyster bed?", correct: "A", options: ["A. March", "B. October", "C. April", "D. None listed"] },
+        { question: "Which ingredients are in the \"sauce that's fit for kings\"?", correct: "B", options: ["A. Paprika, chili powder, cumin, and white pepper", "B. Pepper, salt, vinegar, peppercorns, and mustard seeds", "C. Mustard grains, apple cider vinegar, and blue salt", "D. Cayenne, starch, and ketchup"] },
+        { question: "The Mad Hatter's name is based on what historical basis?", correct: "B", options: ["A. People who wore hats were crazy", "B. Mercury was used in hat making", "C. Hat making as seen as an unskilled profession", "Hats were once believed to make people go crazy"] },
+        { question: "Which character did not appear in Alice in Wonderland's book?", correct: "A", options: ["The Doorknob", "The Dormouse", "The Dodo", "The Frog-Footman"] },
+        { question: "Where is a hidden Mickey in the movie?", correct: "C", options: ["A. In the scene where Alice meets the caterpiller it is behind a leaf stem.", "In the scene where Alice meets the Cheshire Cat, it is visable next to a sign on the tree.", "C.  In the scene where Alice grows and gets stuck in the White Rabbit's house, in Dodo bird's pipe flame", "D. In the tea party scene, it is inside the incriptions of the tea pots"] }
+    ];
+
+    function loadNewQuestion() {
+        if (i < questions.length - 1) {
+            margin = 0;
+            i += 1
+            document.getElementById("question").innerHTML = questions[i].question
+            document.getElementById("answer1").innerHTML = questions[i].options[0]
+            document.getElementById("answer2").innerHTML = questions[i].options[1]
+            document.getElementById("answer3").innerHTML = questions[i].options[2]
+            document.getElementById("answer4").innerHTML = questions[i].options[3]
+        }
+        else {
+            alert("Game Over!")
+            document.write("Your score: " + points)
+        }
+    }
+    points = 0
+    function checkAnswer(num) {
+        if (questions[i].correct.localeCompare(questions[i].options[num - 1].charAt(0)) == 0) {
+            points += 100
+        }
+        else {
+            setInterval(moveRight, 90)
+        }
+        document.getElementById("score").innerHTML = "Score: " + points + "/2500"
+        loadNewQuestion()
+    }
+    function firstRun() {
+        i = 0
+        document.getElementById("question").innerHTML = questions[i].question
+        document.getElementById("answer1").innerHTML = questions[i].options[0]
+        document.getElementById("answer2").innerHTML = questions[i].options[1]
+        document.getElementById("answer3").innerHTML = questions[i].options[2]
+        document.getElementById("answer4").innerHTML = questions[i].options[3]
+    }
+    firstRun()
+</script>
+
 </html>
