--- a/question.html
+++ b/question.html
@@ -3,9 +3,8 @@
 
 <style>
     .question {
-        width: 500px;
-        height: 70px;
-        border: 5px outset red;
+        width: max-content;
+        height: 100%;
         background-color: lightblue;
         text-align: center;
         font-size: 30px;
@@ -168,6 +167,6 @@
         document.getElementById("answer4").innerHTML = questions[i].options[3]
     }
     firstRun()
+    //const fs = require('fs');
 </script>
-
 </html>
