--- a/question.html
+++ b/question.html
@@ -92,7 +92,7 @@
 
     var margin = 0;
 
-    let w = window.screen.width;
+    let w = 1300;
 
     function moveRight() {
         console.log(w);
