added image and blue

--- a/question.html
+++ b/question.html
@@ -121,7 +121,7 @@
     }
     someVar = 0
 
-    var nextVar = setInterval(flashColors, 1000);
+    var nextVar = setInterval(flashColors, 750);
 
     function flashColors() {
 
@@ -129,7 +129,7 @@
 
             someVar = 1;
 
-            document.body.style.backgroundColor = "blue"
+            document.body.style.backgroundColor = "#03b1fc"
 
         } else {
 
