--- a/question.html
+++ b/question.html
@@ -117,9 +117,10 @@
  
     var topMargin = 0;
 
-    let l = window.screen.height;
+    let l = 500;
 
     function moveDown() {
+        console.log(l);
         if (margin == l) {
             topMargin = 0;
         } else {
