trying to flash

--- a/question.html
+++ b/question.html
@@ -151,11 +151,11 @@
     function flashBackground() {
         if(someVar == 0) {
             someVar = 1;
-            document.getElementById("bod").style.backgroundImage = "url(invertedAliceBackground)";
+            document.getElementById('bod').style.backgroundImage = "url(invertedAliceBackground)";
 
         } else {
             someVar = 0;
-            document.getElementById("bod").style.backgroundImage = "url(aliceBackground)";
+            document.getElementById('bod').style.backgroundImage = "url(aliceBackground)";
         }
     }
 
