--- a/question.html
+++ b/question.html
@@ -26,7 +26,7 @@
         width: max-content;
     }
 
-    .Answer {
+    .Answer1 {
         color: black;
         padding: 15px 32px;
         text-align: center;
