--- a/question.html
+++ b/question.html
@@ -140,7 +140,7 @@
 
     function moveDown() {
         console.log(l);
-        if (margin == l) {
+        if (topMargin == l) {
             topMargin = 0;
         } else {
             answer.style.marginTop = topMargin + "px";
