--- a/question.html
+++ b/question.html
@@ -235,6 +235,7 @@
         document.getElementById("answer3").innerHTML = questions[i].options[2]
         document.getElementById("answer4").innerHTML = questions[i].options[3]
     }
-    firstRun()
+    firstRun();
+}
 </script>
 </html>
