--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,3 +1,7 @@
+<!--
+UNICODE USED:
+Unicode Character “🏆” (U+1F3C6) - &#127942
+-->
 
 <html>
     <head>
@@ -6,7 +10,7 @@
     </head>
     <br>
     <div id = "div">
-        <h1 class ="general" id="h1">🏆 Current Rankings 🏆</h1>
+        <h1 class ="general" id="h1">&#127942; Current Rankings &#127942;</h1>
     </div>
     <body>
         <br><br><br>
